@@ -7,6 +7,7 @@
   * Added login retry wait delay on failures.
   * Added support for 'in home' or 'from home' in sqliss.
   * Added support for any scope with 'in sub_nodes' (uses fullpath field).
+  * Added forced skin setting for sites (overwrites all but ACL skin settings). <== TODO: Document
     
 * Minor changes
   * Fixed gemspec to not include TextMate helper and selenium plugin.
